<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".reQuiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/questionImage"
            android:layout_marginTop="30dp"
            android:layout_width="350dp"
            android:layout_height="270dp"
            android:scaleType="centerInside"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/repeatcountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/q1"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="188dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/requestion"
            android:layout_width="311dp"
            android:layout_height="214dp"
            android:gravity="top"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-52dp"
        tools:layout_editor_absoluteY="16dp">


        <Button
            android:id="@+id/repeatBtn1"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/quiz_frame"
            android:onClick="checkAnswer"
            android:text="@string/answer1"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <Button
            android:id="@+id/repeatBtn2"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/quiz_frame"
            android:onClick="checkAnswer"
            android:text="@string/answer2"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <Button
            android:id="@+id/repeatBtn3"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/quiz_frame"
            android:onClick="checkAnswer"
            android:text="@string/answer3"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <Button
            android:id="@+id/repeatBtn4"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/quiz_frame"
            android:onClick="checkAnswer"
            android:text="@string/answer4"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <Button
            android:id="@+id/repeatBtn5"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:onClick="checkAnswer"
            android:text="分からない"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/ads_banner">
            </com.google.android.gms.ads.AdView>
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>